# ads_ss_23

./: .gitignore  CMakeLists.txt  README.md  ads.cpp  utils.h
eval/: make_plots.R  plotting_functions.R
pd/implementation/: cell.h  cell_iterator.h  hash_b.h  manual.hpp  x_fast_trie.hpp  y_fast_trie.hpp
pd/results/: manual.txt  x_fast_trie.txt  y_fast_trie.txt
pd/tests/: pd_benchmark.cpp  test.cpp
pd/util/: commandline.hpp  generate_example.cpp  io.h
rmq/implementation/: linear.hpp  manual.hpp  naive.hpp  nlogn.hpp
rmq/results/: linear.txt  nlogn.txt
rmq/tests/: rmq_benchmark.cpp  test.cpp
rmq/util/: argmin.h  generate_example.cpp  io.h
util/: commandline.hpp
written_assignment/lipics-authors-v2021.1.3/: ads_assignment.aux  ads_assignment.tex  ads_assignment.vtc
